Fixed center alignment of work carousel, added social icons to footer.

--- a/css/scss/_structure.scss
+++ b/css/scss/_structure.scss
@@ -157,16 +157,21 @@
 		}
 	}
 	aside {
-		// padding: 2em;
-		div {
+
+		> div {
 			// border: 1px solid blue;
 			display: flex;
-			flex-flow: row wrap;
-			justify-content: space-between;
+			flex-flow: column wrap;
+			justify-content: center;
 			align-items: flex-start;
 			img:last-child {
 				// border: 1px solid yellow;
 				// align-self: flex-end;
+			}
+			nav {
+				width: 100%;
+				display: flex;
+				justify-content: space-between;
 			}
 			a {
 				// border: 1px solid red;
@@ -176,8 +181,8 @@
 				// flex-direction: column;
 			}
 			.rn-carousel-container {
-				display: flex;
-				align-items: center;
+				align-self: center;
+				width: 60% !important; // Need important to override javascript inline styles
 				li {
 					img {
 					}
@@ -200,8 +205,9 @@
 	background: $color-contact;
 	// justify-content: center;
 
-	.content {
+	p {
 		width: 75%;
+		margin: 0 auto;
 	}
 }
 .icon-logo {
@@ -229,16 +235,22 @@
 }
 
 footer {
-	padding: calc-em(30px, $font-size-base);
+	padding: calc-em(20px, $font-size-base);
 	background-color: $color-footer;
 	display: flex;
-	justify-content: center;
-
+	flex-direction: column;
+	align-items: center;
 	small {
-		color: darken($color-white, 20%);
+		color: darken($color-white, 70%);
+	}
+	nav {
+		width: calc-em(70px, $font-size-base);
+		font-size: calc-em($font-size-m, $font-size-base);
+		ul {
+			display: flex;
+			justify-content: space-between;
+		}
 	}
 }
 
-// ul.test li:first-child {
-// 	margin-top: 100px;
-// }
+// Misc - cateogorize
